--- a/hut-wh-common/pom.xml
+++ b/hut-wh-common/pom.xml
@@ -12,10 +12,10 @@
     <description>dubbo的公共资源</description>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>org.hut</groupId>
+        <artifactId>hut-wh-dubbo</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
