--- a/hut-wh-registry/pom.xml
+++ b/hut-wh-registry/pom.xml
@@ -10,14 +10,12 @@
 
     <name>hut-wh-registry</name>
     <description>Dubbo服务注册与发现的注册中心</description>
-
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>org.hut</groupId>
+        <artifactId>hut-wh-dubbo</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
