--- a/hut-wh-service-provider/hut-wh-user/src/main/resources/application-dev.properties
+++ b/hut-wh-service-provider/hut-wh-user/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
 spring.application.name=hut-wh-user
+##Dubbo Start
 #ApplicationConfig Bean
 dubbo.application.id=hut-wh-user
 dubbo.application.name=hut-wh-user
@@ -14,8 +15,44 @@ dubbo.protocol.status=server
 ## RegistryConfig Bean
 dubbo.registry.id=my-registry
 dubbo.registry.protocol=zookeeper
-dubbo.registry.address=localhost:2181,localhost:2182,localhost:2183
-#dubbo.registry.address=zookeeper://127.0.0.1:2181
+#dubbo.registry.address=localhost:2181,localhost:2182,localhost:2183
+dubbo.registry.address=192.168.99.100:2181
 dubbo.registry.file=f://tmp/dubbo/hut-wh-user.cache
 spring.main.allow-bean-definition-overriding=true
+##Dubbo End
+##DataSource Begin
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/whdubbo?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=dubbo
+spring.datasource.password=dubbo123
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=15
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.pool-name=DatebookHikariCP
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.connection-test-query=SELECT 1
+##DataSource End
+##MyBatis-Plus Start
+##MyBatis-Plus End
+##RabbitMq Start
+spring.rabbitmq.host=192.168.99.100
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=dubbo
+spring.rabbitmq.password=dubbo
+##RabbitMq End
+##Redis Start
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=wh970121
+##Redis End
+
+##shiro
+spring.redis.shiro.host=localhost
+spring.redis.shiro.port=6379
+spring.redis.shiro.password=wh970121
+spring.redis.shiro.timeout=50000
+
 
