--- a/hut-wh-service-provider/hut-wh-user/src/main/resources/application-dev.properties
+++ b/hut-wh-service-provider/hut-wh-user/src/main/resources/application-dev.properties
@@ -36,23 +36,7 @@ spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.connection-test-query=SELECT 1
 ##DataSource End
 ##MyBatis-Plus Start
+mybatis-plus.mapper-locations=classpath:mapper/*.xml
 ##MyBatis-Plus End
-##RabbitMq Start
-spring.rabbitmq.host=192.168.99.100
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=dubbo
-spring.rabbitmq.password=dubbo
-##RabbitMq End
-##Redis Start
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=wh970121
-##Redis End
-
-##shiro
-spring.redis.shiro.host=localhost
-spring.redis.shiro.port=6379
-spring.redis.shiro.password=wh970121
-spring.redis.shiro.timeout=50000
 
 
