--- a/hut-wh-service-consumer/src/main/resources/application-dev.properties
+++ b/hut-wh-service-consumer/src/main/resources/application-dev.properties
@@ -12,10 +12,28 @@ dubbo.protocol.port=12345
 ## RegistryConfig Bean
 dubbo.registry.id=my-registry
 dubbo.registry.protocol=zookeeper
-dubbo.registry.address=localhost:2181,localhost:2182,localhost:2183
+#dubbo.registry.address=localhost:2181,localhost:2182,localhost:2183
+dubbo.registry.address=192.168.99.100:2181
 dubbo.registry.file=f://tmp/dubbo/hut-wh-service-consumer.cache
 ##×Ô¶¨Òå
 
 spring.main.allow-bean-definition-overriding=true
 
-#actor
+##RabbitMq Start
+spring.rabbitmq.host=192.168.99.100
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=dubbo
+spring.rabbitmq.password=dubbo
+##RabbitMq End
+##Redis Start
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=wh970121
+spring.redis.database=2
+##Redis End
+
+##shiro
+spring.redis.shiro.host=localhost
+spring.redis.shiro.port=6379
+spring.redis.shiro.password=wh970121
+spring.redis.shiro.timeout=50000
