1、dubbo项目使用jib实现docker化 2、将项目改造实现分布式部署 3、结构调整

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>hut-wh-common</module>
         <module>hut-wh-monitor</module>
         <module>hut-wh-registry</module>
+        <module>hut-wh-open-api</module>
         <module>hut-wh-service-consumer</module>
         <module>hut-wh-service-provider</module>
     </modules>
@@ -69,15 +70,6 @@
             </snapshots>
         </repository>
     </repositories>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 
 </project>
