--- a/hut-wh-service-consumer/pom.xml
+++ b/hut-wh-service-consumer/pom.xml
@@ -25,6 +25,7 @@
         <java.version>1.8</java.version>
         <shiro.version>1.4.0</shiro.version>
         <shiro-redis.version>2.4.2.1-RELEASE</shiro-redis.version>
+        <jwt-version>0.10.5</jwt-version>
     </properties>
 
     <dependencies>
@@ -89,13 +90,59 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>${jwt-version}</version>
+        </dependency>
     </dependencies>
+    <distributionManagement> <!-- 远程部署管理信息 -->
+        <repository> <!--部署项目产生的构件到远程仓库需要的信息 -->
+            <id>nexus-releases</id>
+            <name>Nexus Release Repository</name>
+            <url>http://127.0.0.1:8081/repository/maven-releases/</url>
+        </repository>
 
+        <snapshotRepository> <!-- 如果没有配置该元素，默认部署到repository元素配置的仓库 -->
+            <id>nexus-snapshots</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://127.0.0.1:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>0.9.10</version>
+                <configuration>
+                    <container>
+                        <mainClass>
+                            org.hut.hutwhserviceconsumer.HutWhServiceConsumerApplication
+                        </mainClass>
+                        <jvmFlags>
+                            <jvmFlag>-Xms512m</jvmFlag>
+                            <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
+                            <jvmFlag>-Dspring.profiles.active=dev</jvmFlag>
+                        </jvmFlags>
+                    </container>
+                    <from>
+                        <!--base image-->
+                        <image>openjdk:8-jre-alpine</image>
+                    </from>
+                    <to>
+                        <image>hutwanghui/dubbo-wh-consumer:0.1</image>
+                        <auth>
+                            <username>hutwanghui</username>
+                            <password>wh970121</password>
+                        </auth>
+                    </to>
+                    <!--<allowInsecureRegistries>true</allowInsecureRegistries>-->
+                </configuration>
             </plugin>
         </plugins>
     </build>
