--- a/hut-wh-service-consumer/src/main/resources/application-dev.properties
+++ b/hut-wh-service-consumer/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.application.name=hut-wh-service-consumer
-server.port=8888
+server.port=8561
 #ApplicationConfig Bean
 dubbo.application.id=hut-wh-service-consumer
 dubbo.application.name=hut-wh-service-consumer
@@ -13,27 +13,30 @@ dubbo.protocol.port=12345
 dubbo.registry.id=my-registry
 dubbo.registry.protocol=zookeeper
 #dubbo.registry.address=localhost:2181,localhost:2182,localhost:2183
-dubbo.registry.address=192.168.99.100:2181
-dubbo.registry.file=f://tmp/dubbo/hut-wh-service-consumer.cache
+#dubbo.registry.address=192.168.99.100:2181
+dubbo.registry.address=172.27.128.17:2181
+dubbo.registry.file=/tmp/dubbo/hut-wh-service-consumer.cache
 ##×Ô¶¨Òå
 
 spring.main.allow-bean-definition-overriding=true
 
 ##RabbitMq Start
-spring.rabbitmq.host=192.168.99.100
+#spring.rabbitmq.host=192.168.99.100
+spring.rabbitmq.host=172.27.128.17
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=dubbo
 spring.rabbitmq.password=dubbo
 ##RabbitMq End
 ##Redis Start
-spring.redis.host=localhost
+#spring.redis.host=localhost
+spring.redis.host=172.27.128.17
 spring.redis.port=6379
 spring.redis.password=wh970121
 spring.redis.database=2
 ##Redis End
 
 ##shiro
-spring.redis.shiro.host=localhost
+spring.redis.shiro.host=172.27.128.17
 spring.redis.shiro.port=6379
 spring.redis.shiro.password=wh970121
 spring.redis.shiro.timeout=50000
