--- a/hut-wh-service-provider/hut-wh-user/src/main/resources/application-dev.properties
+++ b/hut-wh-service-provider/hut-wh-user/src/main/resources/application-dev.properties
@@ -16,16 +16,17 @@ dubbo.protocol.status=server
 dubbo.registry.id=my-registry
 dubbo.registry.protocol=zookeeper
 #dubbo.registry.address=localhost:2181,localhost:2182,localhost:2183
-dubbo.registry.address=192.168.99.100:2181
-dubbo.registry.file=f://tmp/dubbo/hut-wh-user.cache
+dubbo.registry.address=172.27.128.17:2181
+dubbo.registry.file=/tmp/dubbo/hut-wh-user.cache
 spring.main.allow-bean-definition-overriding=true
 ##Dubbo End
 ##DataSource Begin
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/whdubbo?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.name=whdubbo
+spring.datasource.url=jdbc:mysql://172.27.128.17:53306/whdubbo?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=dubbo
 spring.datasource.password=dubbo123
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.auto-commit=true
