1、pms(product Management System)后端接口完成 2、swagger文档编写

--- a/hut-wh-service-provider/hut-wh-product/src/main/resources/application-dev.properties
+++ b/hut-wh-service-provider/hut-wh-product/src/main/resources/application-dev.properties
@@ -39,5 +39,5 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 ##MyBatis-Plus Start
 mybatis-plus.mapper-locations=classpath:mapper/*.xml
 ##MyBatis-Plus End
-
+logging.level.org.hut.product.mapper=debug
 
