--- a/hut-wh-service-consumer/hut-consumer-user/src/main/resources/application-dev.properties
+++ b/hut-wh-service-consumer/hut-consumer-user/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
-spring.application.name=hut-wh-service-consumer
+spring.application.name=hut-wh-user-consumer
 server.port=8561
 #ApplicationConfig Bean
-dubbo.application.id=hut-wh-service-consumer
-dubbo.application.name=hut-wh-service-consumer
+dubbo.application.id=hut-wh-user-consumer
+dubbo.application.name=hut-wh-user-consumer
 #Base packages to Scan Dubbo Components(e.g @Service,@Reference)
-dubbo.scan.basePackages=org.hut.hutwhserviceconsumer.controller
+dubbo.scan.basePackages=org.hut.consumer.user.controller
 #ProtocolConfig Bean
 dubbo.protocol.id=dubbo
 dubbo.protocol.name=dubbo
@@ -15,7 +15,7 @@ dubbo.registry.protocol=zookeeper
 #dubbo.registry.address=localhost:2181,localhost:2182,localhost:2183
 #dubbo.registry.address=192.168.99.100:2181
 dubbo.registry.address=172.27.128.17:2181
-dubbo.registry.file=/tmp/dubbo/hut-wh-service-consumer.cache
+dubbo.registry.file=/tmp/dubbo/hut-wh-user-consumer.cache
 ##×Ô¶¨Òå
 
 spring.main.allow-bean-definition-overriding=true
