--- a/hut-wh-common/pom.xml
+++ b/hut-wh-common/pom.xml
@@ -107,6 +107,13 @@
             <artifactId>swagger-annotations</artifactId>
             <version>1.5.20</version>
         </dependency>
+
+        <!-- jwt 工具-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
     </dependencies>
     <distributionManagement> <!-- 远程部署管理信息 -->
         <repository> <!--部署项目产生的构件到远程仓库需要的信息 -->
